[package]
name = "bntx"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
image = "0.24.5"
ddsfile = "0.5.1"
tegra_swizzle = "0.3.1"